fix map image wrapped on bottom and right edges

--- a/client/parties.css
+++ b/client/parties.css
@@ -1,5 +1,5 @@
 .header {
-    padding: 20px 0;
+    padding: 10px 0;
 }
 
 .details {
@@ -45,7 +45,7 @@ input.chosen {
 .map {
     position: relative;
     background-image: url('/soma.png');
-    background-position: -20px -20px;
+    background-position: 0px 0px;
     width: 1000px;
     height: 860px;
 }
